# process-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  example_config.json  example_config.yaml  install.sh
.cargo/: config.toml
example/: custom_types.proto  parameters.proto  test_app_a.sh  test_app_b.sh
src/: arguments.rs  configfile.rs  main.rs  process_management.rs
